@@ -1886,6 +1886,8 @@ BEGIN
     IDS_PROC_UNIGNORESUCCESS "Removed the file(s)\n%s\nfrom the ignored list."
     IDS_PROC_FORCEMOVE      "Do you really want to move this file or folder?"
     IDS_PROC_OMMITEXTERNALS "Omit externals"
+    IDS_PROC_ICONCACHEREBUILT "Shell Icon Cache was rebuilt!"
+    IDS_PROC_ICONCACHENOTREBUILT "Error rebuilding Shell Icon Cache!"
 END
 
 STRINGTABLE 
