@@ -544,6 +544,8 @@
 #define IDS_PROC_UNIGNORESUCCESS        2311
 #define IDS_PROC_FORCEMOVE              2312
 #define IDS_PROC_OMMITEXTERNALS         2313
+#define IDS_PROC_ICONCACHEREBUILT       2314
+#define IDS_PROC_ICONCACHENOTREBUILT    2315
 #define IDS_DIFF_WCNAME                 2400
 #define IDS_DIFF_BASENAME               2401
 #define IDS_DIFF_WORKINGCOPY            2402
